<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_audio">
        <EditTextPreference
            android:title="@string/pref_approaching"
            android:summary="@string/pref_audio_summary"
            android:defaultValue="@string/pref_approaching_default"
            android:key="prefAudio">
        </EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_scan">
        <SwitchPreference
            android:defaultValue="true"
            android:key="prefGuideSwitch"
            android:summary="@string/pref_guide_switch_summary"
            android:title="@string/pref_guide_switch">
        </SwitchPreference>

        <EditTextPreference
            android:title="@string/pref_threshold"
            android:summary="@string/pref_threshold_summary"
            android:defaultValue="75"
            android:key="prefThreshold">
        </EditTextPreference>

        <ListPreference
            android:key="prefFrequency"
            android:entries="@array/prefFrequency"
            android:entryValues="@array/prefFrequencyValues"
            android:title="@string/pref_frequency">
        </ListPreference>
    </PreferenceCategory>

    <!--<Preference android:title="Acts like a button"-->
        <!--android:key="button"-->
        <!--android:summary="This will act like a button"/>-->
</PreferenceScreen>